Update readme, add sample data

--- a/notebooks/data_curation+inference.ipynb
+++ b/notebooks/data_curation+inference.ipynb
@@ -58,26 +58,6 @@
     "-----\n",
     "## 2. Download Data\n",
     "\n",
-    "### A. Model Weights\n",
-    "\n",
-    "CRESI provided the algorithmic baseline for the [SpaceNet 5 Challenge](https://spacenet.ai/sn5-challenge/).  While challenge participants managed to improve the perforamnce of the CRESI baseline by about 5%, we will use the original CRESI model for this exercise, as it has by far the fastest runtime (see [this blog](https://medium.com/the-downlinq/spacenet-5-winning-model-release-end-of-the-road-fd02e00b826c) for further details.) Model weights are freely available on AWS.  The [AWS CLI](https://aws.amazon.com/cli/) tool can be used, so you once you configure this tool (via ```aws configure```), simply execute the cell below:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!aws s3 cp --recursive s3://spacenet-dataset/spacenet-model-weights/spacenet-5/baseline/ {weight_dir}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### B. Testing Data\n",
-    "\n",
     "Since the pre-trained model weights are available, we need not download the SpaceNet training data.  Instead, we will just download the testing data.  For this exercise, we'll explore SpaceNet Area of Interest (AOI) \\#10: Dar Es Salaam.  This city was withheld for testing purposes in SpaceNet 5, meaning that the pre-trained model has not been trained on this city whatsoever.  To download the data (25 GB):"
    ]
   },
@@ -87,6 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "test_im_raw_dir = '...'\n",
     "!aws s3 cp --recursive s3://spacenet-dataset/AOIs/AOI_10_Dar_Es_Salaam/PS-MS/ {test_im_raw_dir}"
    ]
   },
@@ -156,6 +137,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now ensure the image is a valid COG:\n",
+    "\n",
+    "%cd $test_im_clip_dir\n",
+    "!gdal_translate test1_cog_clip.tif test1_realcog_clip.tif -of COG -co COMPRESS=LZW\t"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -198,13 +191,6 @@
     "\n",
     "Since StudioLab cannot run a Bokeh server, we need to run the dashboard locally.  The relevant results folder in StudioLab is: /home/studio-lab-user/shackleton/results/test1.  Copy these results locally, then run the dashboard according to the README."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
